# ZenlessAssetScrape

./: README.md  pyproject.toml  update.py
.github/workflows/: update.yml
data/: agent_data.json  disc_icons.json  w_engine_icons.json
data/lite/: agent_data.json  disc_icons.json  w_engine_icons.json
zzz_asset_scrape/: dotgg.py  hoyowiki.py
